remove ibm-credentials.env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
+ASSISTANT_APIKEY=api_key
+ASSISTANT_IAM_APIKEY=iam_api_key
+ASSISTANT_URL=url
+ASSISTANT_AUTH_TYPE=iam
+WORKSPACE_ID=workspace_id
+
 TWILIO_NUMBER=+1111111111
 TWILIO_ACCOUNT_SID=twilio_account_sid
 TWILIO_AUTH_TOKEN=twilio_auth_token
 MY_PHONE_NUMBER=+11111111
+
 HOST=localhost
 PORT=8080
