--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "express": "^4.17.1",
     "helmet": "^4.1.0",
     "ibm-watson": "^5.7.0",
-    "twilio": "^3.49.0",
-    "watson-developer-cloud": "^4.0.1"
+    "twilio": "^3.49.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
